// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Me Conversation concerning items doesnt return invalid items 1`] = `
[
  {
    "item": {
      "__typename": "Show",
      "isReference": true,
    },
    "title": "Catty Show",
  },
]
`;

exports[`Me Conversation concerning items returns the conversation items 1`] = `
[
  {
    "item": {
      "__typename": "Artwork",
      "isAcquireable": true,
    },
    "title": "Pwetty Cats",
  },
  {
    "item": {
      "__typename": "Show",
      "isReference": true,
    },
    "title": "Catty Show",
  },
]
`;

exports[`Me Conversation concerning unread indicator returns the right unread status 1`] = `
{
  "isLastMessageToUser": true,
  "unread": true,
  "unreadByCollector": true,
  "unreadByPartner": false,
}
`;

exports[`Me Conversation inquiry request returns the formatted first message as just the formatted questions if no message is present 1`] = `
"I'm interested in information regarding:
• Condition & Provenance"
`;

exports[`Me Conversation inquiry request returns the formatted first message, questions, and shipping location when present 1`] = `
[
  {
    "internalID": "shipping_quote",
    "question": "Shipping",
  },
  {
    "internalID": "condition_and_provenance",
    "question": "Condition & Provenance",
  },
]
`;

exports[`Me Conversation inquiry request returns the formatted first message, questions, and shipping location when present 2`] = `
{
  "city": "New York City",
  "country": "US",
  "state": "NY",
}
`;

exports[`Me Conversation inquiry request returns the formatted first message, questions, and shipping location when present 3`] = `
"I'm interested in information regarding:
• Shipping Quote to New York City, US
• Condition & Provenance

Hello world!"
`;

exports[`Me Conversation returns a conversation 1`] = `
{
  "conversation": {
    "from": {
      "email": "collector@example.com",
    },
    "fromProfile": {
      "email": "collector@example.com",
    },
    "initialMessage": "Loved some of the works at your fair booth!",
    "internalID": "420",
    "lastMessage": "Loved some of the works at your fair booth!",
    "messages": {
      "edges": [
        {
          "node": {
            "body": "I'm a cat",
            "deliveries": null,
            "from": {
              "email": "fancy_german_person@posteo.de",
              "name": "Percy Z",
            },
            "internalID": "240",
            "isFromUser": true,
          },
        },
        {
          "node": {
            "body": "",
            "deliveries": null,
            "from": {
              "email": "postman@posteo.de",
              "name": "Bitty Z",
            },
            "internalID": "241",
            "isFromUser": false,
          },
        },
        {
          "node": {
            "body": null,
            "deliveries": null,
            "from": {
              "email": "fancy_german_person+wunderbar@posteo.de",
              "name": "Matt Z",
            },
            "internalID": "242",
            "isFromUser": true,
          },
        },
        {
          "node": {
            "body": null,
            "deliveries": [
              {
                "openedAt": "2020-12-31T12:00:00+00:00",
              },
            ],
            "from": {
              "email": "postman+wunderlich@posteo.de",
              "name": null,
            },
            "internalID": "243",
            "isFromUser": false,
          },
        },
      ],
    },
    "unread": true,
  },
}
`;
